Improve request simulator
